@@ -4,12 +4,34 @@ plugins {
 }
 
 repositories {
-    maven("https://repo.devcord.club/snapshots")
+    maven("https://repo.devcord.club/releases")
 }
 
 dependencies {
-    implementation("edu.kit.satviz:ipasir4j:0.1.0-SNAPSHOT")
+    implementation("edu.kit:ipasir4j:0.1.1")
     implementation(project(":satviz-common"))
     implementation(project(":satviz-network"))
     implementation(project(":satviz-parsers"))
+}
+
+application {
+    mainModule.set("edu.kit.satviz.producer")
+    mainClass.set("edu.kit.satviz.producer.ProducerApplication")
+}
+
+jlink {
+    launcher {
+        name = "sat-prod"
+    }
+}
+
+tasks {
+
+    compileTestJava {
+        options.compilerArgs = listOf("--add-modules", "jdk.incubator.foreign")
+    }
+
+    test {
+        jvmArgs = listOf("--add-modules", "jdk.incubator.foreign", "--enable-native-access=ALL-UNNAMED")
+    }
 }
